# server

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  zitefy.service
.github/workflows/: build.yml  deploy.yml
scripts/: builder.js  default.json  screenshot.js
src/: config.rs  main.rs  utils.rs
src/handlers/: mod.rs  site.rs  template.rs  user.rs
src/models/: mod.rs  site.rs  template.rs  user.rs
src/server/: mod.rs
src/services/: mod.rs  preview.rs  tempfiles.rs
