[package]
name = "zitefy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "2", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
bcrypt = "0.10"
futures = "0.3"
actix-files = "0.6.6"
jsonwebtoken = "8"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
chrono = "0.4.38"
actix-multipart = "0.7.2"
base64 = "0.22.1"
tempfile = "3.2"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
actix-cors = "0.7.0"
reqwest = "0.11"
bytes = "1.6.1"
